--- a/src/Header.css
+++ b/src/Header.css
@@ -8,4 +8,5 @@
   background-image: linear-gradient(315deg, #ffffff 0%, #d7e1ec 74%);
   font-weight: bolder;
   font-family: Georgia, serif;
+  text-align: center;
 }
