--- a/src/Component/Work.css
+++ b/src/Component/Work.css
@@ -1,10 +1,13 @@
 .title {
-  margin-top: 100px;
+  margin-top: 50px;
   text-align: center;
 }
 
 .workContainer {
-  margin: 50px;
+  margin-top: 5%;
+  margin-left: 10%;
+  margin-right: 10%;
+  margin-bottom: 10%;
 }
 
 @media only screen and (max-width: 600px) {
