--- a/src/Component/Home.css
+++ b/src/Component/Home.css
@@ -54,3 +54,24 @@
     grid-template-columns: repeat(2, 1fr);
   }
 }
+
+.homeImage {
+  border: 10px solid rgb(255, 255, 255);
+}
+
+.home-item:first-child::before {
+  display: block; /*missing prop*/
+  position: absolute;
+  background-repeat: no-repeat;
+  background-size: cover;
+  background-position: center;
+  top: 0;
+  right: 0;
+  height: 100%;
+  width: 100%;
+  z-index: -1;
+  filter: blur(5px);
+  opacity: 0.6;
+  content: "";
+  background-image: url("https://contentgrid.thdstatic.com/hdus/en_US/DTCCOMNEW/Articles/types-of-flooring-hero-A.jpg");
+}
