--- a/src/Footer.css
+++ b/src/Footer.css
@@ -2,4 +2,6 @@
   background-color: #000000;
   font-weight: bolder;
   font-family: Georgia, serif;
+  font-size: 1rem;
+  padding: unset !important;
 }
